--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -13,56 +13,56 @@ omitrequired=false
 
 [Base]
 packages=acl adduser dmsetup insserv libaudit-common libaudit1 libbz2-1.0 libcap2 libcap2-bin libcryptsetup4 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcrypt20 libgpg-error0 libkmod2 libncursesw5 libprocps3 libsemanage-common libsemanage1 libslang2 systemd libsystemd0 libudev1 libustr-1.0-1 procps udev debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common acl adduser base-files base-passwd bash bsdutils coreutils debconf debconf-i18n debianutils diffutils dmsetup dpkg e2fslibs e2fsprogs findutils grep gzip hostname init initscripts insserv libacl1 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcap2 libcap2-bin libcomerr2 libcryptsetup4 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcc1 libgcrypt20 libgpg-error0 libkmod2 liblocale-gettext-perl liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libprocps3 libselinux1 libsemanage-common libsemanage1 libsepol1 libslang2 libsmartcols1 libss2 libsystemd0 libtext-charwidth-perl libtext-iconv-perl libtext-wrapi18n-perl libtinfo5 libudev1 libustr-1.0-1 libuuid1 login lsb-base mawk mount multiarch-support ncurses-base ncurses-bin passwd perl-base procps sed startpar tar tzdata udev util-linux zlib1g apt debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common sudo dbus syslinux syslinux-common xorg openbox chromium grub-common os-prober
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Kernel]
 packages=linux-image-3.16.0-4-686-pae
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 
 [Net]
 packages=netbase ifupdown iproute net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
 packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns zsync git-core binutils ca-certificates curl busybox parted udisks udisks-glue policykit-1 less usbutils gdisk
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [FS]
 packages=samba cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient winbind libnss-winbind
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
 packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc rlwrap libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Spotify]
 packages=libao-dev libglib2.0-dev libjson-glib-1.0-0 libjson-glib-dev libao-common libasound2-dev libreadline-dev libsox-dev libsoup2.4-dev libsoup2.4-1
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [DevTools]
 packages=build-essential cmake dh-autoreconf subversion vim initramfs-tools
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
 [Firmware]
 packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-iwlwifi firmware-linux
-source=http://ftp.nl.debian.org/debian
+source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
 suite=jessie
