--- a/recipes/armv7-dev.conf
+++ b/recipes/armv7-dev.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Firmware DevTools
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware DevTools
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -13,6 +13,12 @@ omitrequired=false
 
 [Base]
 packages=busybox acl dmsetup insserv libbz2-1.0 libcap2 libcap2-bin libdebconfclient0 libdevmapper1.02.1 libgpg-error0 libprocps3 libsemanage-common libsemanage1 systemd libsystemd0 libudev1 procps udev debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common acl base-files base-passwd bash debconf debconf-i18n debianutils e2fslibs e2fsprogs gcc-4.8-base gcc-4.9-base initscripts insserv libacl1 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcomerr2 libcryptsetup4 libdb5.3 libgcc1 libgcrypt20 libgpg-error0 libkmod2 liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libprocps3 libselinux1 libsepol1 libslang2 libsmartcols1 libss2 libsystemd0 libtinfo5 libudev1 libustr-1.0-1 libuuid1 lsb-base mawk multiarch-support ncurses-base ncurses-bin procps startpar tzdata udev util-linux zlib1g apt sudo xz-utils
+source=http://httpredir.debian.org/debian
+keyring=debian-archive-keyring
+suite=jessie
+
+[BaseDebPlus]
+packages=cpio initramfs-tools klibc-utils libdrm2 libklibc makedev mountall plymouth
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
