--- a/recipes/armv7.conf
+++ b/recipes/armv7.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Firmware
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -12,7 +12,13 @@ addimportant=false
 omitrequired=false
 
 [Base]
-packages=busybox acl dmsetup insserv libbz2-1.0 libcap2 libcap2-bin libdebconfclient0 libdevmapper1.02.1 libgpg-error0 libprocps3 libsemanage-common libsemanage1 systemd libsystemd0 libudev1 udev debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common base-files base-passwd bash debconf debconf-i18n debianutils e2fslibs e2fsprogs gcc-4.8-base gcc-4.9-base initscripts libacl1 libattr1 libaudit-common libaudit1 libblkid1 libc-bin libc6 libcomerr2 libcryptsetup4 libdb5.3 libgcc1 libgcrypt20 libkmod2 liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libselinux1  libsepol1 libslang2 libsmartcols1 libss2 libtinfo5 libustr-1.0-1 libuuid1 lsb-base mawk multiarch-support ncurses-base ncurses-bin procps startpar tzdata util-linux zlib1g apt sudo xz-utils
+packages=busybox acl dmsetup insserv libbz2-1.0 libcap2 libcap2-bin libdebconfclient0 libdevmapper1.02.1 libgpg-error0 libprocps3 libsemanage-common libsemanage1 systemd libsystemd0 libudev1 udev debian-archive-keyring gnupg gpgv libapt-pkg4.12 libreadline6 libstdc++6 libusb-0.1-4 readline-common base-files base-passwd bash debconf debconf-i18n debianutils e2fslibs e2fsprogs gcc-4.8-base gcc-4.9-base initscripts libacl1 libattr1 libaudit-common libaudit1 libblkid1 libc-bin libc6 libcomerr2 libcryptsetup4 libdb5.3 libgcc1 libgcrypt20 libkmod2 liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libselinux1  libsepol1 libslang2 libsmartcols1 libss2 libtinfo5 libustr-1.0-1 libuuid1 lsb-base mawk multiarch-support ncurses-base ncurses-bin procps startpar tzdata util-linux zlib1g apt sudo xz-utils  
+source=http://httpredir.debian.org/debian
+keyring=debian-archive-keyring
+suite=jessie
+
+[BaseDebPlus]
+packages=cpio initramfs-tools klibc-utils libdrm2 libklibc makedev mountall plymouth
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
