--- a/recipes/armv8-dev.conf
+++ b/recipes/armv8-dev.conf
@@ -30,8 +30,8 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge
-source=http://httpredir.debian.org/debian
+packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge haveged
+source= havegedhttp://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
 
