--- a/recipes/armv8.conf
+++ b/recipes/armv8.conf
@@ -42,7 +42,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev libjsoncpp0 python-requests
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
