--- a/volumio/etc/udisks-glue.conf
+++ b/volumio/etc/udisks-glue.conf
@@ -28,7 +28,7 @@ match volumio-data {
 
 match ntfs-partitions {
     automount = true
-    automount_options = { sync, noatime, "dmask=0000", "fmask=0000" }
+    automount_options = { noatime, "dmask=0000", "fmask=0000" }
     post_mount_command = "/usr/bin/mpc update USB"
     post_unmount_command = "/usr/bin/mpc update USB"
     post_removal_command = "/usr/bin/mpc update USB"
@@ -36,7 +36,7 @@ match ntfs-partitions {
 
 match vfat-partitions {
     automount = true
-    automount_options = { sync, noatime, "dmask=0000", "fmask=0000" }
+    automount_options = { noatime, "dmask=0000", "fmask=0000" }
     post_mount_command = "/usr/bin/mpc update USB"
     post_unmount_command = "/usr/bin/mpc update USB"
     post_removal_command = "/usr/bin/mpc update USB"
@@ -44,7 +44,7 @@ match vfat-partitions {
 
 match other-partitions {
     automount = true
-    automount_options = { sync, noatime }
+    automount_options = { noatime }
     post_mount_command = "/usr/bin/mpc update USB"
     post_unmount_command = "/usr/bin/mpc update USB"
     post_removal_command = "/usr/bin/mpc update USB"
