--- a/volumio/lib/systemd/system/djmount.service
+++ b/volumio/lib/systemd/system/djmount.service
@@ -2,7 +2,7 @@
 Description = DJMmount
 
 [Service]
-ExecStart=/usr/bin/djmount -o iocharset=utf8 /mnt/UPNP
+ExecStart=/usr/bin/djmount -o iocharset=utf8,allow_other /mnt/UPNP
 Type=forking
 Restart=always
 StandardOutput=syslog
