--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -48,7 +48,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Firmware]
-packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211
+packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-linux-free
 source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 components=main non-free
