--- a/recipes/arm-dev.conf
+++ b/recipes/arm-dev.conf
@@ -54,7 +54,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Firmware]
-packages=firmware-atheros firmware-ralink firmware-realtek
+packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-linux-free
 source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 components=main non-free
