--- a/recipes/armv8.conf
+++ b/recipes/armv8.conf
@@ -48,7 +48,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Firmware]
-packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211
+packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-linux-free
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
