--- a/recipes/x86.conf
+++ b/recipes/x86.conf
@@ -31,7 +31,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns zsync git-core binutils ca-certificates curl busybox parted udisks udisks-glue policykit-1 less usbutils gdisk locales localepurge
+packages=nano psmisc git wget ethtool curl ca-certificates ntp rpl avahi-daemon avahi-discover libnss-mdns zsync git-core binutils ca-certificates curl busybox parted udisks udisks-glue policykit-1 less usbutils gdisk locales localepurge cpufrequtils
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
