--- a/recipes/armv7.conf
+++ b/recipes/armv7.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge haveged cpufrequtils
+packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge haveged cpufrequtils jq
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
