--- a/recipes/arm-dev.conf
+++ b/recipes/arm-dev.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget haveged
+packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget haveged minizip
 source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
