--- a/recipes/minimal.conf
+++ b/recipes/minimal.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp
+packages=nano psmisc git wget ethtool curl ca-certificates ntp minizip
 source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
