--- a/recipes/x86-dev.conf
+++ b/recipes/x86-dev.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc git wget ethtool curl ca-certificates ntp
+packages=nano psmisc git wget ethtool curl ca-certificates ntp minizip
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
