Pi: sync firmware change with arm recipe

--- a/recipes/arm-dev.conf
+++ b/recipes/arm-dev.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Spotify Firmware DevTools
+debootstrap=Base Net Utils Assets FS Spotify Firmware_base Firmware_Foundation DevTools
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -53,9 +53,16 @@ source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
 
-[Firmware]
-packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-linux-free
+[Firmware_base]
+packages=firmware-linux-free
 source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 components=main non-free
+suite=jessie
+
+[Firmware_Foundation]
+packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211
+source=http://archive.raspberrypi.org/debian/
+keyring=debian-archive-keyring
+components=main
 suite=jessie
