--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -9,6 +9,7 @@ wins support = yes
 local master = no
 preferred master = no
 os level = 30
+client min protocol = smb2_02
 
 [Internal Storage]
         comment = Volumio Internal Music Folder
