Avoid SMB1 protocol, take 2
It's not enough to set the client protocol, duh.

--- a/volumio/etc/samba/smb.conf
+++ b/volumio/etc/samba/smb.conf
@@ -10,6 +10,7 @@ local master = no
 preferred master = no
 os level = 30
 client min protocol = smb2_02
+server min protocol = smb2_02
 
 [Internal Storage]
         comment = Volumio Internal Music Folder
