--- a/volumio/etc/nsswitch.conf
+++ b/volumio/etc/nsswitch.conf
@@ -8,7 +8,7 @@ passwd:         compat
 group:          compat
 shadow:         compat
 
-hosts:          files mdns4_minimal [NOTFOUND=return] wins dns
+hosts:          files dns mdns4_minimal [NOTFOUND=return] wins
 networks:       files
 
 protocols:      db files
