--- a/volumio/lib/systemd/system/mpd.service
+++ b/volumio/lib/systemd/system/mpd.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Music Player Daemon
 After=network.target sound.target
+Wants=volumio_cpu_tweak.service
+Before=volumio_cpu_tweak.service
 
 [Service]
 EnvironmentFile=/etc/default/mpd
