--- a/volumio/lib/systemd/system/mpd.service
+++ b/volumio/lib/systemd/system/mpd.service
@@ -1,17 +1,28 @@
 [Unit]
 Description=Music Player Daemon
+Documentation=man:mpd(1) man:mpd.conf(5)
 After=network.target sound.target
 
 [Service]
-EnvironmentFile=/etc/default/mpd
-ExecStart=/usr/bin/mpd --no-daemon $MPDCONF
+Type=notify
+ExecStart=/usr/bin/mpd --no-daemon
+# allow MPD to use real-time priority 50
 LimitRTPRIO=50
-LimitRTTIME=-1
-Restart=always
-StandardOutput=syslog
-StandardError=syslog
-SyslogIdentifier=mpd
+LimitRTTIME=infinity
+
+# disallow writing to /usr, /bin, /sbin, ...
+ProtectSystem=yes
+
+# more paranoid security settings
+NoNewPrivileges=yes
+ProtectKernelTunables=yes
+ProtectControlGroups=yes
+ProtectKernelModules=yes
+# AF_NETLINK is required by libsmbclient, or it will exit() .. *sigh*
+RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX AF_NETLINK
+RestrictNamespaces=yes
 
 [Install]
 WantedBy=multi-user.target
+Also=mpd.socket
 
