--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@ language: bash
 
 sudo: required
 
-addons:
-  apt:
-    sources:
-    - debian-sid
-    packages:
-    - shellcheck
-
 before_script:
  - sudo apt-get --yes --no-install-recommends install binfmt-support qemu-user-static
  - echo ':arm:M::\x7fELF\x01\x01\x01\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02\x00\x28\x00:\xff\xff\xff\xff\xff\xff\xff\x00\xff\xff\xff\xff\xff\xff\xff\xff\xfe\xff\xff\xff:/usr/bin/qemu-arm-static:' | sudo tee -a /proc/sys/fs/binfmt_misc/register
+   # Install shellcheck. Workaround for this issue: https://github.com/travis-ci/travis-ci/issues/8823
+ - curl -sSL "https://ftp-master.debian.org/keys/archive-key-7.0.asc" | sudo -E apt-key add -
+ - echo "deb http://ftp.us.debian.org/debian unstable main contrib non-free" | sudo tee -a /etc/apt/sources.list > /dev/null
+ - sudo apt-get update
+ - sudo apt-get install -y shellcheck
 
 services:
  - docker
